updated project shared lib, HarukaLib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,14 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "sourcemap.json": true
+        "sourcemap.json": true,
+
+        "src/RbxCharacterSounds.client.luau": true,
+
+        "src/shared/Shared/HarukaCMD": true,
     },
-    "stylua.targetReleaseVersion": "latest"
+    "stylua.targetReleaseVersion": "latest",
+    "robloxLsp.diagnostics.globals": [
+        "Path2DControlPoint"
+    ],
 }
